After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686573 - memory leak in dconf_rebuilder_get_parent()
memory leak in dconf_rebuilder_get_parent()
Status: RESOLVED FIXED
Product: dconf
Classification: Core
Component: dconf
git master
Other Linux
: Normal normal
: ---
Assigned To: dconf-maint
dconf-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-21 12:54 UTC by Fabien Tassin
Modified: 2012-10-22 06:45 UTC
See Also:
GNOME target: ---
GNOME version: 3.5/3.6



Description Fabien Tassin 2012-10-21 12:54:26 UTC
Using dconf 0.14.0 with gnome 3.6*, i get a massive memory leak in dconf-service,
about 1GB per day in my case. This seems to be exposed by a gnome-shell extension which monitors a dconf key a couple of times per minute, but even with no extension, the leak is visible (it just takes longer).

I traced the leak down to dconf-rebuilder.c:48, in dconf_rebuilder_get_parent().
It seems parent_name is never freed.

http://git.gnome.org/browse/dconf/tree/service/dconf-rebuilder.c#n31

leak introduced by http://git.gnome.org/browse/dconf/commit/service/dconf-rebuilder.c?id=facae6ffcd5b2935f9b708eecb1fd5aa7c8ddf86
Comment 1 Allison Karlitskaya (desrt) 2012-10-22 06:45:15 UTC
Thanks for the bug.  I'm currently in the middle of rewriting this code and plan to land the changes soon, so no patches please :)