dconf_rebuilder_get_parent: don't leak parent_name

Leak introduced in facae6ffcd5b2935f9b708eecb1fd5aa7c8ddf86.
Tracked down by Fabien Tassin in
https://bugzilla.gnome.org/show_bug.cgi?id=686573